--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.1",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "pug": ">=3.0.1"
   }
 }
