--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@11ty/eleventy": "^0.11.1",
+    "@11ty/eleventy": "^0.12.1",
     "moment": "^2.29.1",
+    "node-fetch": "^2.6.1",
     "pug": ">=3.0.1"
   }
 }
